# prompt-manager

./: .bazelrc  .gitignore  .pypirc.example  =3.1.0  BUILD  LICENSE  MANIFEST.in  MODULE.bazel  Makefile  README.md  WORKSPACE  activeContext.md  base_commands.py  bazel-bin  bazel-out  bazel-testlogs  bazel-windsurf-project  build_helpers.py  commands.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  setup.py  sonar-project.properties  systemPatterns.md  test_fixes.md
.github/workflows/: command-validation.yml  python-package.yml  release.yml
.prompt-manager/: config.yaml  tasks.json
.scannerwork/: report-task.txt
.scannerwork/ir/python/: collected.typedefs  ir_000000012.ir  ir_000000012.metadata  ir_000000017.ir  ir_000000017.metadata  ir_000000018.ir  ir_000000018.metadata  ir_000000030.ir  ir_000000030.metadata  ir_000000031.ir  ir_000000031.metadata  ir_000000032.ir  ir_000000032.metadata  ir_000000033.ir  ir_000000033.metadata  ir_000000034.ir  ir_000000034.metadata  ir_000000035.ir  ir_000000035.metadata  ir_000000036.ir  ir_000000036.metadata  ir_000000037.ir  ir_000000037.metadata  ir_000000038.ir  ir_000000038.metadata  ir_000000039.ir  ir_000000039.metadata  ir_000000040.ir  ir_000000040.metadata  ir_000000041.ir  ir_000000041.metadata  ir_000000042.ir  ir_000000042.metadata  ir_000000043.ir  ir_000000043.metadata  ir_000000044.ir  ir_000000044.metadata  ir_000000045.ir  ir_000000045.metadata  ir_000000046.ir  (+365 more)
.scannerwork/ucfg2/python/: all.typedefs  ucfg___init___Bank_initialize.ucfg  ucfg___init____Task_from_dict.ucfg  ucfg___init____Task_from_dict_1.ucfg  ucfg___init_____suggest_fixes.ucfg  ucfg___init____cli_list_tasks.ucfg  ucfg___init____existing_tests.ucfg  ucfg___init____map_error_path.ucfg  ucfg___init____markdown_files.ucfg  ucfg___init____task_breakdown.ucfg  ucfg___init____to_bolt_prompt.ucfg  ucfg___init____update_context.ucfg  ucfg___init___ager_MemoryBank.ucfg  ucfg___init___ager_TaskStatus.ucfg  ucfg___init___ager__apply_fix.ucfg  ucfg___init___ager_debug_file.ucfg  ucfg___init___ager_get_prompt.ucfg  ucfg___init___ager_initialize.ucfg  ucfg___init___ager_list_tasks.ucfg  ucfg___init___ager_load_tasks.ucfg  ucfg___init___ager_save_tasks.ucfg  ucfg___init___anager_BoltTask.ucfg  ucfg___init___anager_add_task.ucfg  ucfg___init___anager_cli_init.ucfg  ucfg___init___anager_get_task.ucfg  ucfg___init___ap_dependencies.ucfg  ucfg___init___ate_task_status.ucfg  ucfg___init___calate_to_human.ucfg  ucfg___init___dels_TaskStatus.ucfg  ucfg___init___e_task_sequence.ucfg  ucfg___init___eck_environment.ucfg  ucfg___init___eck_token_limit.ucfg  ucfg___init___ecrawl_research.ucfg  ucfg___init___ecrement_tokens.ucfg  ucfg___init___emoryBank_reset.ucfg  ucfg___init___er_Task_to_dict.ucfg  ucfg___init___er__load_config.ucfg  ucfg___init___er__perform_rca.ucfg  ucfg___init___er_cli_add_task.ucfg  ucfg___init___er_enable_debug.ucfg  (+748 more)
docs/: commands.md
docs/examples/: ai-book-writer-integration.md  cline-memory-bank-book-writer.md  llm-enhancement-guide.md
docs/ide-integrations/: README.md
docs/ide-integrations/cline/: README.md  USER_GUIDE.md  bolt-new-cline-memorybank.md  cline-memorybank.md
docs/ide-integrations/cursor/: README.md  memory-bank.md
docs/ide-integrations/jetbrains/: README.md
docs/ide-integrations/vscode/: README.md
memory/: tasks.json
prompt_manager/: __init__.py  cli.py  cli.py.bak  debug.py  debug_manager.py  llm_enhancement.py  llm_guidance.py  llm_manager.py  manager.py  memory.py  memory_bank.py  models.py  prompts.py  repo_manager.py
prompt_manager/cli/: __init__.py  base_commands.py  debug_commands.py  llm_commands.py  memory_commands.py  repo_commands.py  self_improvement_commands.py  utils.py
prompt_manager/models/: __init__.py  learning_session.py  prompt_manager.py
prompt_manager/templates/: README.md
prompt_manager/templates/custom/: review_code.yaml
prompt_manager/templates/default/: add-task.yaml  analyze-file.yaml  analyze-impact.yaml  analyze-repo.yaml  analyze_dependencies.yaml  analyze_file.yaml  analyze_repo.yaml  create-pr.yaml  enhance-system.yaml  export-tasks.yaml  find-root-cause.yaml  find_root_cause.yaml  generate-bolt-tasks.yaml  generate-commands.yaml  generate_bolt_tasks.yaml  iterative_fix.yaml  learn-session-old.yaml  learn-session.yaml  list-tasks.yaml  suggest-improvements.yaml  test-roadmap.yaml  test_roadmap.yaml  trace_error.yaml  update-progress.yaml
prompt_manager/utils/: file_utils.py  output.py  validation.py
prompt_manager_data/: productContext.md  techContext.md
prompt_manager_data/memory/: context.json
src/prompt_manager/: cli.py
test_memory_backup/: context.json  tasks.json
tests/: BUILD  __init__.py  conftest.py  constants.py  mock_llm.py  test_advanced_commands.sh  test_cli.py  test_cli_commands.sh  test_llm_enhancement.py  test_memory_bank.py  test_prompt_manager.py
tests/cli/: BUILD  conftest.py  test_base_commands.py  test_debug_commands.py  test_llm_commands.py  test_repo_commands.py
