###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "prompt_manager",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python:defs.bzl", "py_runtime_pair")
python.toolchain(
    python_version = "3.9",
)

pip = use_extension("@rules_python//python:defs.bzl", "pip_parse")
pip.parse(
    name = "pip",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
