###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "prompt_manager",
    version = "0.3.16",
)

bazel_dep(name = "rules_python", version = "0.40.0")

# Python toolchains
python = use_extension("@rules_python//python:defs.bzl", "py_runtime_pair")

# Python 3.9
python.toolchain(
    name = "python39",
    python_version = "3.9",
)

# Python 3.13
python.toolchain(
    name = "python313",
    python_version = "3.13",
)

# Make the toolchains available
use_repo(python, "python39_toolchain", "python313_toolchain")
