[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-manager"
version = "0.3.15"
description = "Development workflow management system with memory tracking"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "MIT"
dependencies = [
    "pyyaml>=6.0.1",
    "typing-extensions>=4.7.1",
    "click>=8.0.0",
]

[project.scripts]
prompt-manager = "prompt_manager.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black",
    "flake8",
    "mypy",
    "pytest-watch",
]

[tool.black]
line-length = 79
target-version = ['py39', 'py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
