[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tosins-prompt-manager"
version = "0.3.18"
description = "Development workflow management system with memory tracking"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "MIT"
dependencies = [
    "pyyaml>=6.0.1",
    "typing-extensions>=4.7.1",
    "click>=8.0.0",
    "gitpython>=3.1.40",
    "pathlib>=1.0.1",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
prompt-manager = "prompt_manager.cli.__init__:cli"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest-watch",
]

[tool.black]
line-length = 79
target-version = ['py39', 'py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.hatch.build.targets.wheel]
packages = ["prompt_manager"]
